# owl-spacemouse-controller

./: .gitignore  README.md  generate_grpc_protos.py  main.py  pyproject.toml  robgpt_control_service.proto  robot_modified.urdf  robot_pybullet.urdf  robot_simplified.urdf  simulate_robot.py  spacemouse_ball.py
